# fire-engine

./: .clang-format  .clang-tidy  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CODING_STANDARDS.md  LICENSE  README.md
cmake/: Sanitizers.cmake  StaticAnalysis.cmake
engine/: CMakeLists.txt  Defines.h
engine/audio/: CMakeLists.txt
engine/core/: CMakeLists.txt
engine/core/debug/: ANSI-color-codes.h  Assert.cpp  Assert.h  Logger.cpp  Logger.h
engine/input/: CMakeLists.txt
engine/physics/: CMakeLists.txt
engine/platform/: CMakeLists.txt
engine/renderer/: CMakeLists.txt
sandbox/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
